@@ -4,7 +4,10 @@
 package org.snova.framework.proxy.c4;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLStreamHandler;
+import java.net.URLStreamHandlerFactory;
 
 /**
  * @author wqy
@@ -12,16 +15,18 @@ import java.net.URL;
  */
 public class C4ServerAuth
 {
-	public URL url;
+	public URI url;
 
 	public boolean parse(String line)
 	{
 		try
 		{
-			url = new URL(line);
+
+			url = new URI(line);
 		}
-		catch (MalformedURLException e)
+		catch (Exception e)
 		{
+			e.printStackTrace();
 			return false;
 		}
 		return true;
